--- a/css/styles.css
+++ b/css/styles.css
@@ -301,6 +301,7 @@ a {
 .recommendation {
   background-image: url(../images/unsplash_wHJ5L9KGTl4.png);
   background-repeat: no-repeat;
+  background-size: cover
 }
 
 .recommendation__inner {
@@ -338,18 +339,37 @@ a {
 .about_me__title {
   font-size: 64px;
   font-family: 'Anton';
-  font-weight: 400;
 }
 
 .about_me__item-title {
   display: flex;
   align-items: center;
   gap: 38px;
+  margin-bottom: 76px;
 }
 
 .about_me__text {
   font-size: 36px;
-  margin-top: 76px;
   max-width: 665px;
   letter-spacing: -1.5px;
+  font-weight: 600;
 }
+
+.about_me__list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.photo1 {
+  max-width: 746px;
+  max-height: 530px;
+  margin-top: 100px;
+}
+
+.photo2 {
+  max-width: 794px;
+  max-height: 531px;
+}
+
+
